--- a/css/style.css
+++ b/css/style.css
@@ -987,18 +987,22 @@ h3 {
   padding-left: 0;
 }
 .header-area .main-header-area.sticky {
-  box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-  position: fixed;
-  width: 100%;
-  top: -70px;
-  left: 0;
-  right: 0;
-  z-index: 990;
-  transform: translateY(70px);
-  transition: transform 500ms ease, background 500ms ease;
-  -webkit-transition: transform 500ms ease, background 500ms ease;
-  box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-  background: rgba(244, 126, 32, 0.87);
+  box-shadow: 0px 3px 16px 0px rgb(0 0 0 / 10%);
+    position: fixed;
+    width: 100%;
+    top: -70px;
+    left: 0;
+    right: 0;
+    z-index: 990;
+    transform: translateY(70px);
+    transition: transform 500ms ease, background 500ms ease;
+    -webkit-transition: transform 500ms ease, background 500ms ease;
+    box-shadow: 0 0.2rem 0.2rem 0 rgb(0 0 0 / 30%);
+    background: #fff;
+}
+.header-area .main-header-area.sticky .main-menu ul li a {
+  color: #144a23;
+  font-weight: 600;
 }
 
 @media (max-width: 767px) {
@@ -1615,12 +1619,12 @@ h3 {
 .prog-details .more_info {margin-top: 5px;}
 .prog-details .more_info a, .prog-details a {color: #5b2711; font-weight: 600;}
 .prog-details .more_info a:hover, .prog-details a:hover {color: #f27f1e;}
-.prog-details .faq_ask #accordion .card .card-body {
+/* .prog-details .faq_ask #accordion .card .card-body {
   /*font-size: 15px;
   line-height: 28px;
   font-weight: 400;
-  line-height: 28px;*/
-}
+  line-height: 28px;
+} */
 .prog-details .faq_ask #accordion .btn-link.focus, .accordion_area .faq_ask #accordion .btn-link:focus {
   text-decoration: none;
   border-color: transparent;
