--- a/css/style.css
+++ b/css/style.css
@@ -901,9 +901,9 @@ h3 {
   }
 }
 .header-area .main-header-area .main-menu ul li a {
-  color: #fff;
+  color: #1e3e27;
   font-size: 14px;
-  font-weight: 300;
+  font-weight: 600;
   display: inline-block;
   padding: 35px 0px 35px 0px;
   position: relative;
@@ -1093,7 +1093,7 @@ h3 {
   }
 }
 .slider_bg_1 {
-  background-image: url(../img/banner/banner.png);
+  background-image: url(../img/banner/banner.jpg);
 }
 .slider_bg_rw {
   background-image: url(../img/banner/banner_rw3.jpg);
@@ -1106,7 +1106,7 @@ h3 {
   z-index: 0;
 }
 .slider_area::before {
-  background: #f47e20;
+  /* background: #f47e20; */
   position: absolute;
   left: 0;
   top: 0;
@@ -1122,7 +1122,7 @@ h3 {
   background-position: center center;
 }
 .slider_area .single_slider_reg_btn {height: 500px;}
-.slider_area .single_slider_reg {height: 320px;}
+.slider_area .single_slider_reg {height: 420px;}
 .slider_area .single_slider.single_listing {
   height: 500px;
 }
@@ -1151,13 +1151,15 @@ h3 {
 .slider_area .single_slider .slider_text h3 {
   font-size: 50px;
   font-weight: 400;
-  color: #fff;
+  color: #1e3e27;
   margin-bottom: 10px;
   text-transform: uppercase;
 }
 
 .slider_area .single_slider .slider_text_register h3,
-.slider_area .single_slider .slider_text_register_btn h3 {font-size: 35px; margin-bottom: 10px;}
+.slider_area .single_slider .slider_text_register_btn h3 {font-size: 38px; margin-bottom: 10px;}
+.slider_area .single_slider .slider_text_register h5,
+.slider_area .single_slider .slider_text_register_btn h5 {font-size: 18px; margin-bottom: 10px; color: #a42f1d; font-weight: 600;}
 .slider_area .single_slider .slider_text_register_btn .btn {
   letter-spacing: normal;
   text-transform: none; 
@@ -1179,7 +1181,7 @@ h3 {
 
 .slider_area .single_slider .slider_text span.separator-line {
   display: inline-block;
-  background: #fff;
+  background: #1e3e27;
   width: 200px;
   height: 4px;
   -webkit-border-radius: 2px;
@@ -1188,7 +1190,7 @@ h3 {
   margin-bottom: 4px;
 }
 .slider_area .single_slider .slider_text span.live {background-color: #e11d19; padding: 0px 10px;}
-.slider_area .single_slider .slider_text_register span.separator-line {width: 150px; margin-bottom: 0;}
+.slider_area .single_slider .slider_text_register span.separator-line {width: 150px;}
 .slider_area .single_slider .slider_text_register_btn span.separator-line {width: 150px; margin-bottom: 15px;}
 .slider_area .single_slider .slider_text p {
   text-align: center;
@@ -2437,13 +2439,16 @@ h3 {
 }
 .service_area {
   padding-top: 40px;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
 .partner_area{padding-top: 30px; padding-bottom: 20px;}
 .about_event {
-  background-image: url(../img/banner/aboutevent.png);
+  /* background-image: url(../img/banner/aboutevent.png); */
+  background-color: #fbfcff;
   background-repeat: no-repeat;
   background-size: cover;
+  /* border-top: 1px dashed #a0a0a0; */
+  
 }
 .about_border {border-right: 1px solid #a0a0a0;}
 .bg-gray {background-color: #f3f3f3!important}
@@ -2818,7 +2823,7 @@ h3 {
 .form-contact {
   background-color: #fff;
   padding: 30px;
-  box-shadow: 0px 0px 15px rgba(0,0,0,.3);
+  box-shadow: 0 2px 3px rgb(5 5 5 / 10%);
 }
 .form-contact h4 {margin-top: 5px;}
 
