--- a/css/style.css
+++ b/css/style.css
@@ -2441,6 +2441,9 @@ h3 {
   padding-top: 40px;
   padding-bottom: 60px;
 }
+.service_area .col-lg-3{
+  margin-bottom: 15px;
+}
 .partner_area{padding-top: 30px; padding-bottom: 20px;}
 .about_event {
   /* background-image: url(../img/banner/aboutevent.png); */
