--- a/css/style.css
+++ b/css/style.css
@@ -3510,6 +3510,9 @@ h1,h2,h3,h4,h5,h6 {line-height: 1.2em;}
   background-color:#39b54a !important;
   border: 1px solid #39b54a;
 }
+.payment-meth .DPO_link:hover{
+  background-color:#29d440 !important;
+}
 .note{
   color: red !important;
   font-weight: 700 !important;
