--- a/css/style.css
+++ b/css/style.css
@@ -1159,7 +1159,7 @@ h3 {
 .slider_area .single_slider .slider_text_register h3,
 .slider_area .single_slider .slider_text_register_btn h3 {font-size: 38px; margin-bottom: 10px;}
 .slider_area .single_slider .slider_text_register h5,
-.slider_area .single_slider .slider_text_register_btn h5 {font-size: 18px; margin-bottom: 10px; color: #a42f1d; font-weight: 600;}
+.slider_area .single_slider .slider_text_register_btn h5 {font-size: 18px; margin-bottom: 10px; color: #37af47; font-weight: 600;}
 .slider_area .single_slider .slider_text_register_btn .btn {
   letter-spacing: normal;
   text-transform: none; 
