--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -5726,6 +5726,7 @@ body.skin-3 {
   padding: 5px 0;
   text-transform: uppercase;
   font-size: 14px;
+  color: #f47e20;
 }
 #card-profile  .card h6{
   font-size: 14px !important;
@@ -5734,4 +5735,26 @@ body.skin-3 {
 .text-secondary h6{
   font-weight: 200 !important;
   text-align: right;
+}
+.text-secondary .fullscreen{
+  cursor: pointer;
+}
+.text-secondary .fullscreen:-webkit-full-screen {
+  width: auto !important;
+  height: auto !important;
+  margin:auto !important;
+}
+.text-secondary .fullscreen:-moz-full-screen {
+  width: auto !important;
+  height: auto !important;
+  margin:auto !important;
+}
+.text-secondary .fullscreen:-ms-fullscreen {
+  width: auto !important;
+  height: auto !important;
+  margin:auto !important;
+}  
+.doc-img{
+  text-align: right !important;
+  margin-right: 17px;
 }
