--- a/css/slicknav.css
+++ b/css/slicknav.css
@@ -192,7 +192,7 @@
   padding: 0;
 }
 .slicknav_icon-bar {
-    background: #fff !important;
+    background: #1e3e27 !important; 
 }
 .slicknav_nav {
 	background: #fff;
