--- a/css/custom.css
+++ b/css/custom.css
@@ -332,6 +332,103 @@
   margin-right: 17px;
 }
 
+/* badge style */
+.card-container{
+	width: 300px;
+	height: 430px;
+	background: #fff;
+	background-image: url(../img/banner/badgebg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+	border-radius: 6px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	box-shadow: 0px 1px 10px 1px #f1f1f1;
+	overflow: hidden;
+	display: inline-block;
+}
+.event-details{
+	padding: 30px 10px 48px;
+	background: #37af47;
+	font-weight: 300;
+	text-align: center;
+	background-image:linear-gradient(rgb(17 70 24 / 50%),rgb(17 70 24 / 50%)),url(../img/banner/banner_new.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.event-details h3{
+	color: #fff;
+	font-weight: 300;
+	font-size: 18px;
+	margin: 0;
+}
+.event-details p{
+	font-size: 12px;
+	color: #ececed;
+}
+.inner-img{
+	width: 100px;
+	height: 100px;
+	border-radius: 100%;
+	border: 3px solid #fff;
+	margin: auto;
+	text-align: center;
+	margin-top: -50px;
+}
+.inner-img img{
+	width: 100px;
+	height: 100px;
+	border-radius: 100%;
+}
+.names{
+	margin: auto;
+	text-align: center;
+}
+.names h4{
+	margin-top: 15px !important;
+	margin-bottom: 4px !important;
+}
+.names h5{
+	margin-top: 0px !important;
+	font-size: 15px;
+	font-weight: 100;
+	margin-bottom: 10px !important;
+}
+.names hr{
+	width: 80%;
+	margin-bottom: 15px !important;
+}
+.qr-code{
+	margin: auto;
+	text-align: center;
+	margin-top: 10px;
+}
+.qr-code img{
+	width: 70px;
+}
+.p-category{
+	margin: auto;
+	text-align: center;
+	padding: 8px 0;
+	background: #37af47;
+	bottom: 0;
+	margin-top: 22px;
+}
+.p-category h4{
+	margin: 0;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 300;
+}
+
+
+
+
+
+
+
 
 
 @media(max-width:640px) {
