--- a/css/custom.css
+++ b/css/custom.css
@@ -422,7 +422,18 @@
 	text-transform: uppercase;
 	font-weight: 300;
 }
-
+.main-menu ul .drop-language a{
+  padding: 10px 10px !important;
+}
+.main-menu ul .drop-language  img{
+  width: 16px;
+  margin-right: 5px;
+}
+.main-menu ul .drop-language .btn-secondary{
+  color: #fff;
+  background-color: #2a8b3a;
+  border-color: #2a8b3a;
+}
 
 
 
