--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 @font-face {
-  font-family: ubuntu-regular;
-  src: url('../fonts/ubuntu/Ubuntu-R.ttf'); 
+  font-family: Comfortaa-Light;
+  src: url('../fonts/comfortaa/Comfortaa-Light.ttf'); 
 }
 @font-face {
-  font-family: ubuntu-Bold;
-  src: url('../fonts/ubuntu/UbuntuMono-B.ttf'); 
+  font-family: Comfortaa-Bold;
+  src: url('../fonts/comfortaa/Comfortaa-Bold.ttf'); 
 }
 @font-face {
-  font-family: ubuntu-light;
-  src: url('../fonts/ubuntu/Ubuntu-L.ttf'); 
+  font-family: Comfortaa-Medium;
+  src: url('../fonts/comfortaa/Comfortaa-Medium'); 
 }
 
 body {
-  font-family: ubuntu-light;
+  font-family: Comfortaa-light;
   font-weight: normal;
   font-style: normal;
 }
@@ -75,7 +75,7 @@ button {
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: ubuntu-regular;
+  font-family: Comfortaa-light;
   color: #001D38;
 }
 
@@ -103,6 +103,7 @@ p {
   line-height: 28px;
   color: #7A838B;
   margin-bottom: 13px;
+  font-family: Comfortaa-light;
 }
 
 *::-moz-selection {
@@ -510,8 +511,8 @@ h3 {
   margin-bottom: 4px;
 }
 .section_title h3 {
-  font-size: 30px;
-  font-weight: 400;
+  font-size: 28px;
+  font-weight: 600;
   color: #37af47;
   position: relative;
   z-index: 0;
@@ -924,7 +925,7 @@ h3 {
 
 @media (min-width: 1200px) and (max-width: 1500px) {
   .header-area .main-header-area .main-menu ul li a {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 .header-area .main-header-area .main-menu ul li a i {
@@ -1163,7 +1164,7 @@ h3 {
 }
 
 .slider_area .single_slider .slider_text_register h3,
-.slider_area .single_slider .slider_text_register_btn h3 {font-size: 38px; margin-bottom: 10px;}
+.slider_area .single_slider .slider_text_register_btn h3 {font-size: 38px; margin-bottom: 10px; font-weight: 700;}
 .slider_area .single_slider .slider_text_register h5,
 .slider_area .single_slider .slider_text_register_btn h5 {font-size: 18px; margin-bottom: 10px; color: #37af47; font-weight: 600;}
 .slider_area .single_slider .slider_text_register_btn .btn {
@@ -1272,7 +1273,7 @@ h3 {
 }
 
 .slider_area .single_slider .slider_text p {
-  font-size: 30px;
+  font-size: 27px;
   font-weight: 400;
   color: #F91842;
   margin-bottom: 24px;
@@ -2834,7 +2835,7 @@ h3 {
   padding: 30px;
   box-shadow: 0 2px 3px rgb(5 5 5 / 10%);
 }
-.form-contact h4 {margin-top: 5px;}
+.form-contact h4 {margin-top: 5px; font-weight: 600; font-size: 16px;}
 
 .form-contact label {
   font-size: 14px;
@@ -3413,6 +3414,10 @@ h1,h2,h3,h4,h5,h6 {line-height: 1.2em;}
   border-top-color: #37af47;
   margin-top: 10px;
 }
+.pricing .box h3{
+  font-size: 20px !important;
+  font-weight: 600;
+}
 .red-card{
   border-top-color: #a42f1d !important;
 }
@@ -3443,18 +3448,20 @@ h1,h2,h3,h4,h5,h6 {line-height: 1.2em;}
   color: #5b2c13;
 } */
 .pricing h4 {
-  font-size: 28px;
+  font-size: 24px;
   color: #37af47;
-  font-weight: 400;
+  font-weight: 600;
   margin-bottom: 0px;
+  margin: 8px 0;
 }
 .pricing h4 sup {
-  font-size: 20px;
+  font-size: 16px;
 }
 .pricing h4 span {
   color: #37af47;
-  font-size: 18px;
+  font-size: 17px;
   display: block;
+  
 }
 .pricing ul {
   padding: 0 0 10px 0;
