--- a/css/custom.css
+++ b/css/custom.css
@@ -433,10 +433,11 @@
   color: #fff;
   background-color: #2a8b3a;
   border-color: #2a8b3a;
+  font-size: 13px;
 }
 .div-inst p{
-  font-size: 13px;
-  line-height: unset;
+  font-size: 12px;
+  line-height: 22px;
 }
 
 
