--- a/css/custom.css
+++ b/css/custom.css
@@ -467,8 +467,44 @@
 .input-group.date .input-group-addon i {
   margin-top: 2px;
 }
-
-
+.instructions_li li{
+    font-size: 14px;
+    line-height: 32px;
+    color: #040E27;
+    font-weight: 400;
+    position: relative;
+    padding-left: 23px;
+}
+.instructions_li li::before{
+  position: absolute;
+    left: 0;
+    width: 8px;
+    height: 8px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    background: #37af47;
+    content: '';
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+.note_section{
+  padding: 20px 0 0 0;
+}
+.note_section h3{
+    font-size: 20px;
+    font-weight: 600;
+    color:#a42f1d;
+    position: relative;
+    z-index: 0;
+    margin-bottom: 1px;
+}
+.note_section a{
+  color: #2196F3;
+}
 
 @media(max-width:640px) {
 	.ms-auth-form form{
