--- a/css/style.css
+++ b/css/style.css
@@ -523,8 +523,8 @@ h3 {
 .about_dates small {color: #5b270f;}
 .about_dates p {color: #37af47!important;}
 .btn-primary {
-  background-color: #f47e20;
-  border-color: #f47e20;
+  background-color: #2a8b3a;
+  border-color: #2a8b3a;
   text-transform: uppercase;
   border-radius: 0;
 }
