--- a/css/custom.css
+++ b/css/custom.css
@@ -280,6 +280,10 @@
   width: 100%;
   font-size: 12px;
 }
+#book-info p{
+  font-size: 12px;
+  line-height: 19px;
+}
 .wlcm-mssg h1{
   font-size: 30px;
   font-weight: 700;
